Do not build turbo-jpeg as it is provided by Qt5.

--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -22,3 +22,4 @@
 
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
+lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it
