Build turbo-jpeg on Windows.

--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -22,4 +22,6 @@
 
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
-lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it
+if(NOT WIN32)
+	lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it
+endif()
