--- a/.gitmodules
+++ b/.gitmodules
@@ -95,3 +95,9 @@
 [submodule "submodules/externals/libjpeg-turbo"]
 	path = submodules/externals/libjpeg-turbo
 	url = git://git.linphone.org/libjpeg-turbo.git
+[submodule "submodules/ortp"]
+	path = submodules/ortp
+	url = git://git.linphone.org/ortp.git
+[submodule "submodules/mediastreamer2"]
+	path = submodules/mediastreamer2
+	url = git://git.linphone.org/mediastreamer2.git
