feat(ui/modules/Linphone/Codecs): in progress

--- a/linphone-desktop/CMakeLists.txt
+++ b/linphone-desktop/CMakeLists.txt
@@ -92,8 +92,9 @@ set(SOURCES
   src/components/camera/MSFunctions.cpp
   src/components/chat/ChatModel.cpp
   src/components/chat/ChatProxyModel.cpp
-  src/components/codecs/CodecsModel.cpp
+  src/components/codecs/AbstractCodecsModel.cpp
   src/components/codecs/AudioCodecsModel.cpp
+  src/components/codecs/CodecsModel.cpp
   src/components/codecs/VideoCodecsModel.cpp
   src/components/contact/ContactModel.cpp
   src/components/contact/VcardModel.cpp
@@ -129,9 +130,10 @@ set(HEADERS
   src/components/calls/CallsListModel.hpp
   src/components/chat/ChatModel.hpp
   src/components/chat/ChatProxyModel.hpp
-  src/components/codecs/CodecsModel.cpp
-  src/components/codecs/AudioCodecsModel.cpp
-  src/components/codecs/VideoCodecsModel.cpp
+  src/components/codecs/CodecsModel.hpp
+  src/components/codecs/AbstractCodecsModel.hpp
+  src/components/codecs/AudioCodecsModel.hpp
+  src/components/codecs/VideoCodecsModel.hpp
   src/components/contact/ContactModel.hpp
   src/components/contact/VcardModel.hpp
   src/components/contacts/ContactsListModel.hpp
