feat(ui/views/App/Main): display popup when auth failed

--- a/linphone-desktop/CMakeLists.txt
+++ b/linphone-desktop/CMakeLists.txt
@@ -89,6 +89,7 @@ set(SOURCES
   src/app/providers/ThumbnailProvider.cpp
   src/app/translator/DefaultTranslator.cpp
   src/components/assistant/AssistantModel.cpp
+  src/components/authentication/Authentication.cpp
   src/components/call/CallModel.cpp
   src/components/calls/CallsListModel.cpp
   src/components/camera/Camera.cpp
@@ -126,9 +127,10 @@ set(HEADERS
   src/app/providers/ThumbnailProvider.hpp
   src/app/translator/DefaultTranslator.hpp
   src/components/assistant/AssistantModel.hpp
-  src/components/camera/Camera.hpp
+  src/components/authentication/Authentication.hpp
   src/components/call/CallModel.hpp
   src/components/calls/CallsListModel.hpp
+  src/components/camera/Camera.hpp
   src/components/camera/MSFunctions.hpp
   src/components/chat/ChatModel.hpp
   src/components/chat/ChatProxyModel.hpp
