Do not blacklist turbo-jpeg on Mac OS X.

--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -22,6 +22,6 @@
 
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
-if(NOT WIN32)
+if(NOT WIN32 AND NOT APPLE)
 	lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it
 endif()
