chore(assets): provide rc files for assistant

--- a/linphone-desktop/CMakeLists.txt
+++ b/linphone-desktop/CMakeLists.txt
@@ -281,3 +281,16 @@ install(TARGETS ${TARGET_NAME}
 install(FILES "${ASSETS_DIR}/linphonerc-factory"
   DESTINATION "${CMAKE_INSTALL_DATADIR}/linphone"
 )
+
+set(ASSETS_ASSISTANT_DIR "${ASSETS_DIR}/assistant")
+set(ASSISTANT_INSTALL_DATADIR "${CMAKE_INSTALL_DATADIR}/assistant")
+
+install(FILES "${ASSETS_ASSISTANT_DIR}/use-other-sip-account.rc"
+  DESTINATION "${ASSISTANT_INSTALL_DATADIR}/use-other-sip-account.rc"
+)
+install(FILES "${ASSETS_ASSISTANT_DIR}/create-linphone-sip-account.rc"
+  DESTINATION "${ASSISTANT_INSTALL_DATADIR}/create-linphone-sip-account.rc"
+)
+install(FILES "${ASSETS_ASSISTANT_DIR}/use-linphone-sip-account.rc"
+  DESTINATION "${ASSISTANT_INSTALL_DATADIR}/use-linphone-sip-account.rc"
+)
