Detect if linphone-qt is already running when launching the installer.

--- a/cmake_builder/linphone_package/NSIS.template.in
+++ b/cmake_builder/linphone_package/NSIS.template.in
@@ -904,7 +904,8 @@ SectionEnd
 
 Function .onInit
   FindWindow $0 "gdkWindowToplevel" "Linphone"
-  StrCmp $0 0 notRunning
+  FindWindow $1 "Qt5QWindowOwnDCIcon" "Linphone"
+  StrCmp "$0$1" "00" notRunning
   MessageBox MB_OK|MB_ICONEXCLAMATION "Linphone is running. Please close it first and restart the installation." /SD IDOK
   Abort
 
